fixing bg color on scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,6 +36,7 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
+  background: white;
   /* box-shadow: inset 0 0 5px gray; */
   /* border-radius: 10px; */
 }
